Fixed gallery visualization on mobile phones

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
     --dark-text: #000;
     --dark-bg: #000;
     --dark-grey: #2e2e2e;
+    --light-grey: #5f5f5f;
 }
 
 *, *::before, *::after {
@@ -411,8 +412,6 @@ button .hero-title:hover {
 
     max-height: 50px;
     max-width: auto;
-
-    /* border: 2px solid red; */
 }
 
 .hero-panel-button {
@@ -525,7 +524,7 @@ button .hero-title:hover {
 
     width: 100%;
 
-    padding: 1em;
+    padding: 0.3em;
 
     border-top: 4px solid var(--dark-bg);
 }
@@ -552,14 +551,42 @@ button .hero-title:hover {
 }
 
 .side-scroll {
-    border: 1px solid red;
+    background-color: var(--bright-bg);
+
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    aspect-ratio: 1 !important;
+
+    padding: 0.5em;
+
+    border-radius: 50%;
+
+    z-index: 1;
+}
+
+.left-scroll {
+    left: 1em;
+}
+
+.right-scroll {
+    right: 1em;
+}
+
+.side-scroll img {
+    height: 30px;
+    width: 30px;
 }
 
 .gallery {
     position: relative;
-
     display: flex;
     align-items: center;
+
+    width: 100%;
+    height: 100%;
 
     overflow-x: scroll;
     overflow-y: hidden;
@@ -567,20 +594,22 @@ button .hero-title:hover {
     border: 1px solid gold;
 }
 
+
 /* card */
 
 .card-container {
     position: relative;
+    flex-shrink: 0;
 
-    min-width: 20%;
-    max-height: 100%;
-    aspect-ratio: 0.6 !important;
+    width: 100%;
+    height: 100%;
 
     filter: brightness(1) blur(0);
     -webkit-filter: brightness(1) blur(0);
+
+    border-radius: 1.5em;
     
     transition: all 250ms ease;
-    perspective: 1000px;
     transform-origin: left;
 }
 
@@ -595,8 +624,6 @@ button .hero-title:hover {
     border: 2px solid var(--dark-bg);
     border-radius: inherit;
 
-    box-shadow: -1rem 0 3rem #000, 1rem 0 3rem #000;
-
     transition: transform 1s ease;
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
@@ -605,6 +632,10 @@ button .hero-title:hover {
 .card * {
     font-family: 'Raleway', 'Ubuntu', 'Sans-serif';
     color: var(--dark-text);
+}
+
+.flipped {
+    transform: rotateY(180deg);
 }
 
 .card-front, .card-back {
@@ -619,7 +650,7 @@ button .hero-title:hover {
 
     border-radius: inherit;
 
-    overflow-y: hidden;
+    overflow-y: scroll;
     backface-visibility: hidden;
 }
 
@@ -647,8 +678,8 @@ button .hero-title:hover {
     border-radius: 10px;
 }
 
-/* card-front specific */
 
+/* card-front specific */
 
 .card-cover {
     width: 95%;
@@ -656,7 +687,7 @@ button .hero-title:hover {
     margin: 0.5em 0;
 
     border: 2px solid var(--dark-bg);
-    border-radius: 20px;
+    border-radius: 1.5em;
 }
 
 .card-content {
@@ -724,6 +755,7 @@ button .hero-title:hover {
     width: fit-content;
 
     padding: 0.4em 0.8em;
+    margin-top: 1em;
 
     border: 2px solid var(--dark-text);
     border-radius: 20px;
@@ -1020,6 +1052,10 @@ button .hero-title:hover {
         opacity: 0;
     }
 
+    .hoverable:hover {
+        transform: translate(0, -1rem);
+    }
+
 
     /* page structure */
     .category-header, .category-footer {
@@ -1131,34 +1167,28 @@ button .hero-title:hover {
         transform: translateY(0);
     }
 
+
     /* gallery */
     .side-scroll {
         visibility: hidden;
-        /* height: 50%;
-        width: 5%;
-    
-        margin: 2.5%;
-    
-        border: 1px solid red; */
     }
 
     .gallery {
-        width: 90%;
-        height: 100%;
-    
-        padding: 1px 2rem;
-    
-        border: 1px solid gold;
-        border-radius: 10px;
+        padding: 0 5%;
     }
 
 
     /* card */
     .card-container {
-        min-height: 90%;
+        width: auto;
+        height: 90%;
         aspect-ratio: 0.6 !important;
 
-        border-radius: 20px;
+        perspective: 1000px;
+    }
+
+    .card {
+        box-shadow: -1rem 0 3rem #000, 1rem 0 3rem #000;
     }
 
     .highlighted~.card-container, .selected~.card-container {
@@ -1167,6 +1197,10 @@ button .hero-title:hover {
     
     .coverable:not(:first-child) {
         margin-left: -7rem;
+    }
+
+    .flipped {
+        transform: rotateY(180deg) scale(1.1);
     }
 
     .underlined-title::after {
@@ -1181,9 +1215,6 @@ button .hero-title:hover {
     .flip:hover {
         background-color: var(--dark-bg);
     }
-
-
-    /* card-front specific */
 
     /* .card-content {
         height: 60%;
@@ -1284,10 +1315,7 @@ button .hero-title:hover {
 
     /* cards */
     .card-container {
-        min-height: 80%;
-        aspect-ratio: 0.6 !important;
-
-        border-radius: 20px;
+        height: 90%;
     }
 
     .highlighted~.card-container, .selected~.card-container {
@@ -1366,6 +1394,10 @@ button .hero-title:hover {
         border: 0;
     }
 
+    .side-scroll {
+        visibility: visible;
+    }
+
     .category-header, .category-footer {
         height: 2.5em;
     }
@@ -1428,18 +1460,6 @@ button .hero-title:hover {
 /* ############################## */
 /* ###### TRANSFORMATIONS ####### */
 /* ############################## */
-
-.hoverable:hover {
-    transform: translate(0, -1rem);
-}
-
-.flipped {
-    transform: rotateY(180deg);
-}
-
-.flipped-zoomed {
-    transform: rotateY(180deg) scale(1.1);
-}
 
 .selected {
     overflow-y: visible;
@@ -1548,23 +1568,29 @@ button .hero-title:hover {
 /* width */
 ::-webkit-scrollbar {
     display: none;
-  }
+    width: 10px;
+    height: 10px;
+}
 
 /* button */
 ::-webkit-scrollbar-button {
-display : none;
+    display : none;
 }
   
   /* Track */
 ::-webkit-scrollbar-track {
-border-radius: 10px;
+    /* background-color: var(--light-grey); */
+
+    border-radius: 10px;
 }
 
 ::-webkit-scrollbar-track-piece {
-border-radius: 10px;
+    border-radius: 10px;
 }
   
   /* Handle */
 ::-webkit-scrollbar-thumb {
-border-radius: 10px;
+    /* background-color: var(--dark-bg); */
+
+    border-radius: 10px;
 }
